refactored declaration